tests/miniJava/neg/004402_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] class java { } ( ) { return 0 ; } }
